k8s/security/network/allow-frontend-to-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-backend
  namespace: linuxspec-prod
spec:
  podSelector:
    matchLabels:
      app: linuxspec-backend
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: linuxspec-frontend
      ports:
        - protocol: TCP
          port: 5000
