k8s/security/network/allow-ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nginx-ingress-to-apps
  namespace: linuxspec-prod
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - linuxspec-frontend
          - linuxspec-backend
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/component: controller
