k8s/security/network/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: linuxspec-prod
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
